# SentinelGuard

./: .cursorignore  .env.sample  .gitignore  Cargo.toml  README.md  devbox.json  docker-compose.yml
migrations/: 20250610095255_Project_Table.down.sql  20250610095255_Project_Table.up.sql  20250617115516_Service_Account_Table.down.sql  20250617115516_Service_Account_Table.up.sql  20250618125053_Project_Scope_Table.down.sql  20250618125053_Project_Scope_Table.up.sql  20250623015430_Environment_Table.down.sql  20250623015430_Environment_Table.up.sql  20250623110616_Project_Access_Tables.down.sql  20250623110616_Project_Access_Tables.up.sql  20250625143116_AccessToken_Table.down.sql  20250625143116_AccessToken_Table.up.sql  20250626153905_Environment_Keys_Table.down.sql  20250626153905_Environment_Keys_Table.up.sql
src/: config.rs  lib.rs  main.rs
src/models/: access_token.rs  environment.rs  environment_key.rs  mod.rs  pagination.rs  project.rs  project_access.rs  project_access_scopes.rs  project_scope.rs  service_account.rs  sort.rs
src/repositories/: access_token_repository.rs  base.rs  environment_key_repository.rs  environment_repository.rs  mod.rs  project_access_repository.rs  project_access_scopes_repository.rs  project_repository.rs  project_scope_repository.rs  register.rs  service_account_repository.rs
src/routes/: environment_key_route.rs  environment_route.rs  mod.rs  project_access_route.rs  project_access_scopes_route.rs  project_route.rs  project_scope_route.rs  register.rs  service_account_route.rs
src/services/: base.rs  environment_key_service.rs  environment_service.rs  mod.rs  project_access_scopes_service.rs  project_access_service.rs  project_scope_service.rs  project_service.rs  register.rs  service_account_service.rs
src/utils/: mod.rs  security.rs  swagger.rs
src/utils/tokens/: hmac.rs  key_builder.rs
tests/commons/: macros.rs
tests/integration/: mod.rs
tests/integration/fixtures/: access_tokens.sql  environment_keys.sql  (+9 more)
(+19 files in other folders)
